# AIVA_2022_METAL

./: ImperDetect.py  ImperDetect.py.bak  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: tests.yml
docker/: Dockerfile
docs/: prueba.md
src/algorithm/: file_manager.py  main_algorithm.py  yolo_implementation.py
src/fast_rcnn/: main_fast_rcnn.py
src/file_manager/: main_file_manager.py
src/imper_detect/: main_imper_detect.py
src/imperfection/: main_imperfection.py
src/server/: main_server.py
src/system_recognition/: main_system_recognition.py
src/yolo_v5/: main_yolo_v5.py
tests/: out.txt  out1_0.txt  out1_1.txt  test_algorithm.py
training/: Deteccion_Metal_2_YOLOv5.ipynb
yolov5/runs/detect/exp/labels/: inclusion_1.txt
