[metadata]
name = AIVA_2022_METAL
description = Detección de defectos en imágenes de superficies de metal
author = Natalia / Vicent / Luis
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    algorithm
    file_manager
    yolo_implementation
install_requires =
    numpy>=1.19
    opencv_python>=4.2

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
algorithm = py.typed
file_manager = py.typed
yolo_implementation = py.typed

[flake8]
max-line-length = 160