[metadata]
name = AIVA_2022_METAL
description = Detección de defectos en imágenes de superficies de metal
author = Natalia / Vicent / Luis
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    algorithm
    file_manager
    imper_detect
    imperfection
install_requires =
    numpy>=1.19
    opencv_python>=4.2
    matplotlib>=3.2
    Pillow>=7.1
    PyYAML>=5.3
    requests>=2.23
    scipy>=1.4
    torch>=1.7
    torchvision>=0.8
    tqdm>=4.41
    pandas>=1.1
    seaborn>=0.11
    tensorboard>=2.4

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
algorithm = py.typed
file_manager = py.typed
imper_detect = py.typed
imperfection = py.typed

[flake8]
max-line-length = 160